# fs2open.github.com

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  appveyor.yml  configure.ac
chromiumprocess/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  main.h
chromiumprocess/resources/: fsoExtension.js
cmake/: cef.cmake  globals.cmake  gtk.cmake  platform-unix.cmake  platform-win32.cmake  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-msvc.cmake  util.cmake
code/: CMakeLists.txt  default_files.cmake  glloadgen.cmake  source_groups.cmake
code/ai/: ai_profiles.cpp  aicode.cpp
code/anim/: animplay.cpp  animplay.h  packunpack.h
code/asteroid/: asteroid.cpp
code/autopilot/: autopilot.cpp
code/bmpman/: bm_internal.h  bmpman.cpp  bmpman.h
code/camera/: camera.cpp
code/cfile/: VPFileSystem.cpp  VPFileSystem.h  VPFileSystemEntry.cpp  VPFileSystemEntry.h  ZipFileSystem.cpp  ZipFileSystem.h  ZipFileSystemEntry.cpp  cfile.cpp  cfile.h  checksum.cpp  checksum.h  filesystem.h  fileystem.cpp  internal.h  io.cpp  io.h  types.h  util.cpp  util.h
code/chromium/: ApplicationImpl.cpp  ApplicationImpl.h  Browser.cpp  Browser.h  ChromiumStateLogic.cpp  ChromiumStateLogic.h  ClientImpl.cpp  ClientImpl.h  chromium.cpp  chromium.h
code/cmdline/: cmdline.cpp  cmdline.h
code/controlconfig/: controlsconfig.cpp  controlsconfig.h  controlsconfigcommon.cpp
code/cutscene/: cutscenes.cpp  movie.cpp  mvelib.cpp  mvelib.h  oggplayer.cpp  oggplayer.h
code/ddsutils/: ddsutils.cpp  ddsutils.h
code/debris/: debris.h
code/debugconsole/: console.cpp
code/external_dll/: externalcode.h  trackirpublic.h
code/fireball/: fireballs.cpp
code/fred2/: fred.rc  fredrender.cpp  sexp_tree.cpp  sexp_tree.h
code/freespace2/: freespace.cpp  levelpaging.cpp
code/fs2netd/: fs2netd_client.cpp
code/gamehelp/: contexthelp.cpp  gameplayhelp.cpp
code/gamesequence/: gamesequence.cpp  gamesequence.h
code/gamesnd/: eventmusic.cpp  gamesnd.cpp
code/globalincs/: alphacolors.cpp  def_files.cpp  def_files.h  fsmemory.cpp  fsmemory.h  globals.h  pstypes.h  scp_defines.h  util.cpp  util.h  vmallocator.h  windebug.cpp
code/graphics/: 2d.cpp  2d.h  font.cpp  font.h  generic.cpp  gropengl.cpp  gropengl.h  gropenglbmpman.cpp  gropenglbmpman.h  gropengldraw.cpp  gropengldraw.h  gropenglextension.cpp  gropenglextension.h  gropenglpostprocessing.cpp  gropenglshader.cpp  gropenglshader.h  gropengltexture.cpp  gropengltnl.cpp  grstub.cpp
code/headtracking/: freetrack.cpp  freetrack.h  headtracking.cpp  headtracking_internal.h  trackir.cpp  trackir.h
code/hud/: hud.cpp  hud.h  hudartillery.cpp  hudconfig.cpp  hudescort.cpp  hudets.cpp  hudmessage.cpp  hudparse.cpp  hudparse.h  hudreticle.cpp  hudscripting.cpp  hudscripting.h  hudshield.cpp  hudtarget.cpp  hudtarget.h  hudtargetbox.cpp
code/iff_defs/: iff_defs.cpp
code/io/: cursor.cpp  joy-sdl.cpp  key.cpp  mouse.cpp
code/jpgutils/: jpgutils.cpp  jpgutils.h
code/lab/: lab.cpp
code/localization/: localize.cpp  localize.h
code/mainloop/: mainloop.cpp  mainloop.h
code/menuui/: barracks.cpp  credits.cpp  mainhallmenu.cpp  optionsmenumulti.cpp  playermenu.cpp  readyroom.cpp  snazzyui.cpp  techmenu.cpp
code/mission/: missionbriefcommon.cpp  missioncampaign.cpp  missioncampaign.h  missionhotkey.cpp  missionload.cpp  missionlog.cpp  missionmessage.cpp  missionparse.cpp  missiontraining.cpp
code/missionui/: chatbox.cpp  fictionviewer.cpp  fictionviewer.h  missionbrief.cpp  missioncmdbrief.cpp  missiondebrief.cpp  missionpause.cpp  missionscreencommon.cpp  missionshipchoice.cpp  missionweaponchoice.cpp  redalert.cpp  redalert.h
code/mod_table/: mod_table.cpp  mod_table.h
code/model/: model.h  modelinterp.cpp  modelread.cpp
code/nebula/: neb.cpp  neblightning.cpp
code/network/: multi.cpp  multi.h  multi_data.cpp  multi_dogfight.cpp  multi_log.cpp  multi_obj.cpp  multi_options.cpp  multi_pxo.cpp  multi_update.cpp  multi_voice.cpp  multi_xfer.cpp  multi_xfer.h  multimsgs.cpp  multiteamselect.cpp  multiui.cpp  multiutil.cpp  psnet2.cpp  stand_gui-unix.cpp  stand_gui.cpp  stand_gui.h
code/object/: collideshipweapon.cpp  objcollide.cpp  objcollide.h  object.cpp  object.h  objectshield.cpp  objectsort.cpp
code/osapi/: osapi.cpp  osapi.h  osregistry.cpp  outwnd.cpp  outwnd_unix.cpp
code/palman/: palman.cpp
code/parse/: generic_log.cpp  lua.cpp  lua.h  lua_globals.h  parselo.cpp  parselo.h  scripting.cpp  sexp.cpp  sexp.h
code/particle/: EffectTrait.cpp  EffectTrait.h  GenericEffectTrait.cpp  GenericEffectTrait.h  ParticleEffect.cpp  ParticleEffect.h  ParticleSource.cpp  ParticleSource.h  ParticleSystem.cpp  ParticleSystem.h  TraitUtil.cpp  TraitUtil.h  particle.cpp  particle.h
code/pcxutils/: pcxutils.cpp  pcxutils.h
code/pilotfile/: csg.cpp  csg_convert.cpp  pilotfile.cpp  pilotfile.h  pilotfile_convert.cpp  pilotfile_convert.h  plr.cpp  plr_convert.cpp
docs/: conf.py  index.rst  requirements.txt
fred2/: CMakeLists.txt  dumpstats.cpp  fred.rc  fredrender.cpp  fredstubs.cpp  management.cpp  missionsave.cpp  missionsave.h  sexp_tree.cpp  textviewdlg.cpp  voiceactingmanager.cpp  voiceactingmanager.h
freespace2/: CMakeLists.txt  freespace.cpp  freespace.h
lib/: CMakeLists.txt  boost.cmake  bullet.cmake
lib/libsdl/lib/x86/: SDL2.lib
lib/lua/: CMakeLists.txt
lib/md5/: CMakeLists.txt
lib/minizip/: CMakeLists.txt
lib/oggvorbis/: CMakeLists.txt
lib/openal/: CMakeLists.txt
lib/threadpool/: CMakeLists.txt  dummy.cpp
lib/trueType/: CMakeLists.txt
lib/trueType/FreeType/: CMakeLists.txt
lib/trueType/FreeType/lib/win32/: freetype247MT.lib
lib/trueType/ftgl/: CMakeLists.txt  config.h  source_groups.cmake
lib/utfcpp/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
qtfred/: CHANGELOG.md  CMakeLists.txt  fredrender.cpp  fredrender.h  fredstubs.cpp  main.cpp  object.cpp
qtfred/include/: editor.h  fredrender.h  iterators.h  mainwindow.h  renderwidget.h
qtfred/src/: editor.cpp  fredrender.cpp  fredstubs.cpp  main.cpp  mainwindow.cpp  renderwidget.cpp
qtfred/ui/: mainwindow.ui
(+98 files in other folders)
