
INCLUDE(util)

IF(APPLE)
	ADD_SUBDIRECTORY(mac)
ENDIF(APPLE)

ADD_SUBDIRECTORY(libjpeg)

ADD_SUBDIRECTORY(zlib)

ADD_SUBDIRECTORY(libpng)

ADD_SUBDIRECTORY(lua)

ADD_SUBDIRECTORY(oggvorbis)

ADD_SUBDIRECTORY(openal)

IF (USE_SPEECH)
	ADD_SUBDIRECTORY(speech)
ENDIF(USE_SPEECH)

# These are only required for the web-ui which is non-Windows
IF(UNIX)
	ADD_SUBDIRECTORY(jansson)

	ADD_SUBDIRECTORY(mongoose)
ENDIF(UNIX)

IF(MSVC)
	IF(MSVC_USE_RUNTIME_DLL)
		SET(Boost_USE_STATIC_RUNTIME FALSE)
	ELSE(MSVC_USE_RUNTIME_DLL)
		SET(Boost_USE_STATIC_RUNTIME TRUE)
	ENDIF(MSVC_USE_RUNTIME_DLL)
	
	ADD_DEFINITIONS(-D_HAS_ITERATOR_DEBUGGING=0)
ENDIF(MSVC)

SET(Boost_USE_STATIC_LIBS ON)

ADD_SUBDIRECTORY(vfspp)
SET(VFSPP_LIBRARIES VFSPP CACHE INTERNAL "")

set_target_properties(VFSPP
	PROPERTIES
		FOLDER "3rdparty"
)

find_package(Boost COMPONENTS filesystem system iostreams regex REQUIRED)

MAKE_CACHE_INTERNAL(Boost_LIBRARIES)

IF(MSVC60 OR MSVC70)
	INCLUDE(stlport.cmake)
ENDIF(MSVC60 OR MSVC70)
