
include(source_groups.cmake)

ADD_LIBRARY(ftgl STATIC ${file_root})

ADD_DEFINITIONS(-DFTGL_LIBRARY_STATIC)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

set_target_properties(ftgl
	PROPERTIES
		INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}
		INTERFACE_COMPILE_DEFINITIONS FTGL_LIBRARY_STATIC
		FOLDER "3rdparty"
		COMPILE_DEFINITIONS _CRT_SECURE_NO_WARNINGS
)

IF(MSVC)
	set_target_properties(ftgl PROPERTIES
		COMPILE_DEFINITIONS_DEBUG "_DEBUG;PDB_DEBUGGING=1;_HAS_ITERATOR_DEBUGGING=0"
	)
ENDIF(MSVC)

TARGET_LINK_LIBRARIES(ftgl freetype)

SET(FTGL_LIBS ftgl CACHE INTERNAL "FTGL library")
